# xgboost-demo

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: run_pipeline.py  test_predictions.py
src/: __init__.py  api.py  data_generator.py  feature_engineering.py  train.py
